<resources>
    <string name="app_name">MyAlarmApp</string>
    <string name="txt_hello">Hello</string>
    <string name="txt_welcome">Welcome to Smart Alarm</string>
    <string name="txt_time_today">13.05</string>
    <string name="txt_date_today">Sun, 26 december 2022</string>
    <string name="txt_set_reminder">Set Your Reminder</string>
    <string name="txt_set">Set</string>
    <string name="txt_one_time_alarm">One Time Alarm</string>
    <string name="txt_repeating_alarm">Repeating Alarm</string>
    <string name="txt_your_alarm">Your Alarm</string>
    <string name="txt_set_date">Set Date</string>
    <string name="txt_set_time">Set Time</string>
    <string name="txt_note">Note</string>
    <string name="txt_add_set_alarm">Add Set Alarm</string>
    <string name="txt_cancel_set_alarm">Cancel Set Alarm</string>
    <string name="txt_input_note">Input Your Note</string>

</resources>